unpackaged/main/default/objects/Case/fields/Current_Workaround__c.field-meta.xml
<CustomField>
    <fullName>Current_Workaround__c</fullName>
    <inlineHelpText>What is your current workaround?</inlineHelpText>
    <label>Current Workaround</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>