unpackaged/main/default/objects/Case/fields/Does_this_affect_another_team__c.field-meta.xml
<CustomField>
    <fullName>Does_this_affect_another_team__c</fullName>
    <inlineHelpText>Will this proposed change have any impact on another team in the business?</inlineHelpText>
    <label>Does this affect another team?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>