unpackaged/main/default/objects/Case/fields/Gearset_Team__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team__c</fullName>
    <inlineHelpText>What team are you in?</inlineHelpText>
    <label>Gearset Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gearset_Departments</valueSetName>
    </valueSet>
</CustomField>