unpackaged/main/default/objects/Case/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who requested this case</inlineHelpText>
    <label>Stakeholder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholder</relationshipName>
    <type>Lookup</type>
</CustomField>