unpackaged/main/default/objects/Case/fields/What_is_the_problem__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_problem__c</fullName>
    <inlineHelpText>What is the problem you are trying to solve?</inlineHelpText>
    <label>What is the problem?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>