unpackaged/main/default/objects/Case/recordTypes/Salesforce_Org.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Org</fullName>
    <active>true</active>
    <businessProcess>Internal SF Dev</businessProcess>
    <description>Any problems/feature requests for Gearset internal Salesforce org</description>
    <label>Salesforce Org</label>
</RecordType>