unpackaged/main/default/objects/Case/listViews/SF_Requests_Case.listView-meta.xml
<ListView>
    <fullName>SF_Requests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SF Requests</label>
    <queue>SF_Requests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>